# makai_vcd_reader

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  lexer.rs  lib.rs  parser.rs  tokenizer.rs  utils.rs
src/lexer/: position.rs
src/tokenizer/: token.rs
tests/: tests.rs
