[package]
name = "vcd_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
logos = "0.12.0"
serde = {version = "1.0.145", features = ["derive"]}
indiscriminant = "0.2.0"
byte_storage = { path = "../byte_storage" }
waveform_db = { path = "../waveform_db" }
crossbeam = "0.8.1"

[dev-dependencies]
log = "0.4.0"
simple_logger = "2.3.0"
colored = "2"
indicatif = "0.17.1"
tempfile = "3.2.0"
bincode = "1.3.3"
humansize = "2.0.0"
