[package]
name = "makai_vcd_reader"
version = "0.1.0"
authors = ["David Gronlund"]
edition = "2021"
description = "VCD file reader"
readme = "README.md"
repository = "https://github.com/dagronlund/makai_vcd_reader"
license = "MIT"
keywords = ["eda", "vcd"]

[dependencies]
bytes = "1.1.0"
logos = "0.12.0"
crossbeam = "0.8.1"
log = "0.4.0"
indiscriminant = "0.2.0"
makai = {path = "../makai", version = "0.2.0"}
makai_waveform_db = {path = "../makai_waveform_db", version = "0.1.0"}

[dev-dependencies]
simple_logger = "2.3.0"
colored = "2"
indicatif = "0.17.1"
tempfile = "3.2.0"
bincode = "1.3.3"
humansize = "2.0.0"
